base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefixes
  namespace: nkp-devops-lab
spec:
  stripPrefix:
    prefixes:
      - /user01
      - /user02

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nkp-devops-lab-web
  namespace: nkp-devops-lab
  annotations:
    kubernetes.io/ingress.class: kommander-traefik
    traefik.ingress.kubernetes.io/router.tls: "false"
    traefik.ingress.kubernetes.io/router.middlewares: nkp-devops-lab-stripprefixes@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /user01
        pathType: Exact
        backend:
          service:
            name: user01-web
            port:
              number: 8080
  - http:
      paths:
      - path: /user02
        pathType: Exact
        backend:
          service:
            name: user02-web
            port:
              number: 8080
